// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumbs/generateAutoCollapseParameters generates one set of parameters when maxItems is set 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 4,
    },
    "priority": 1,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when having both itemsBeforeCollapse and itemsAfterCollapse set to a range 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 3,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 2,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when having itemsAfterCollapse fixed 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 6,
      "maxItems": 9,
    },
    "priority": 8,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 5,
      "maxItems": 9,
    },
    "priority": 7,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 4,
      "maxItems": 9,
    },
    "priority": 6,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 3,
      "maxItems": 9,
    },
    "priority": 5,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 3,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when having itemsAfterCollapse set to a range 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 5,
      "maxItems": 9,
    },
    "priority": 8,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 4,
      "maxItems": 9,
    },
    "priority": 7,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 3,
      "maxItems": 9,
    },
    "priority": 6,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 5,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 3,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when having itemsBeforeCollapse fixed 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 7,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 8,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 6,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 7,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 5,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 6,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 4,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 5,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 3,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 2,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when having itemsBeforeCollapse set to a range 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 6,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 8,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 5,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 7,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 4,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 6,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 5,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 3,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 2,
  },
]
`;

exports[`breadcrumbs/generateAutoCollapseParameters generates parameters when no constraints are set 1`] = `
Array [
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 10,
    },
    "priority": 11,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 4,
      "itemsBeforeCollapse": 4,
      "maxItems": 9,
    },
    "priority": 8,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 4,
      "maxItems": 9,
    },
    "priority": 7,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 3,
      "itemsBeforeCollapse": 3,
      "maxItems": 9,
    },
    "priority": 6,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 3,
      "maxItems": 9,
    },
    "priority": 5,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 2,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 4,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 2,
      "maxItems": 9,
    },
    "priority": 3,
  },
  Object {
    "output": Object {
      "itemsAfterCollapse": 1,
      "itemsBeforeCollapse": 1,
      "maxItems": 9,
    },
    "priority": 2,
  },
]
`;
